# OmniRDP

./: .gitignore  ACTIVE_CODEBASE.md  AGENTS.md  CURRENT_STATE.md
.github/: README.md
.github/workflows/: ci.yml  codacy.yml  codeql.yml  flawfinder.yml  security-static.yml
OmniRDP/: CMakeLists.txt  compile_flags.txt
OmniRDP/include/: backend.h  platform_compat.h  viewer_server.h
OmniRDP/src/: backend.c  ini_parser.c  ini_parser.h  instance_runner.c  main.c  pipe_protocol.c  pipe_protocol.h  platform_compat.c  pointer_shape.c  pointer_shape.h  svc_config.c  svc_config.h  svc_dpapi.c  svc_dpapi.h  svc_instance_mgr.c  svc_instance_mgr.h  svc_log.c  svc_log.h  svc_main.c  svc_pipe_server.c  svc_pipe_server.h  svc_service.c  svc_service.h  tray_icon.c  tray_icon.h  tray_log_viewer.c  tray_log_viewer.h  tray_main.c  tray_pipe_client.c  tray_pipe_client.h  tray_status_dlg.c  tray_status_dlg.h  viewer_internal.c  viewer_internal.h  viewer_server.c
OmniRDP/tests/: CMakeLists.txt  test_late_join_policy.c  test_pointer_shape.c  test_svc_config.c  test_utils.h  test_viewer_state.c
freerdp-3.25.0/libfreerdp/core/: transport.c
freerdp-3.26.0/: .clang-format
freerdp-3.26.0/winpr/libwinpr/utils/: ssl.c
patches/freerdp/: 0001-winpr-skip-legacy-provider-when-internal-md4.patch
rdp-multiplexer/: CMakeLists.txt
rdp-multiplexer/include/: backend.h  viewer_server.h
rdp-multiplexer/src/: backend.c  main.c  platform_compat.c  pointer_shape.h  viewer_internal.c  viewer_internal.h  viewer_server.c
rdp-multiplexer/tests/: CMakeLists.txt  RunBuiltTest.cmake  test_late_join_policy.c  test_pointer_shape.c
setup/: OmniRDP.iss  build-installer-local.ps1  config.ini.template
setup/license/: NOTICE.txt
